# moji

./: .dockerignore  .env  .gitattributes  .gitignore  .neoconf.json  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.dev.yml  docker-compose.yml  fly.toml
.github/workflows/: build.yml
.sqlx/: query-0668df1ce414c6d7e5fd0c755c74158d35c9d7a8ef0c5075bd0cb4407160d4dd.json  query-0b6c612dc6a74c5dfeddb58d63d035e5381d4053dde7625c7f8ec5804f50d37f.json  query-12f96bc2e752eff96e2b16134cefa528cdde275d8ee8428072d2d726b8734d1d.json  query-141a21b46ff8f9ba85e06208fd6f548c4b00447de6d11176b0bab73fd825c64d.json  query-14c002ea1860bba0154c5a5cc13b31d39f07559a0f56107fa0532e8fc2ef071a.json  query-184379f27d998f7b8940b34b8dbdf18c1707a9c67ac2bed438eb1746ef76986b.json  query-21da9aa7729f50ecf1603014c0c1bcc1baa48630d945845867ea3d68099f57a8.json  query-234730396f88aebbe36ac715f9a4113681d1bafec39908bcf2b892e51af5f6e0.json  query-2b3c9c7b20876e21f73d4295082a7a19d54fac29b055948db7678a3ca42ef00b.json  query-324809716b99db917929228c8d910e174aca53c65ef3844c083fcc3afcfef574.json  query-3b6eaf26b5d3c69e360b2bf4b136886aa4adb3fe7b92538f7d317f656475d796.json  query-3e84f60b7a0145cec9f1aee8ae27ce46c602b969a5bdb2821f75bf5e3e818b2c.json  query-450aad972c66dda572f75da2403abba9a5e81fb29e7699b6e5ea92df206debbe.json  query-4a1955a4d0b7cc8b30d3d0b03e1243b6e8c1f8a2b932b8543d7bc94362a6b70f.json  query-4fe16f1c9d64b08000881013eba15fd99e490efb805b4bb059cebb1401d46dcf.json  query-548f8b13e223ac10896e9a9c5e176f5fa0d57fc2709a5767b85d1b3e74f5fe30.json  query-55794021ef9bd17de2fbd6f7e2b32bde424c00658513bcb1c6f6e70202e22225.json  query-5d413c022ca878f0ac39f917203a4f7a427754cc1918afdc367dd604f483e58b.json  query-61cd6e2362fe0204cd67edd33da6fa7c3d304c7ea604263c06fdab71de64525d.json  query-664d945fa1cf92608723c1eeaa5d1d2b0631f5300b8d77a9c04e70cfe0446860.json  query-701ebf89dfbf2764f7e045e2839b2304796b445cb1e38e74b520289f815f1f1d.json  query-7ba5e92c9ab034396232590572ad11a0bba0020595e444ea6dfc6dc92f73d55b.json  query-7bcfd23784ed9ea2ae10d68a92757a311302dbd100e3f4ad551a1b17f3bbcff5.json  query-81be0da04da3cbe54d7b9d5605f41896755fac5a80750ef157d618b5430d0d73.json  query-88faac47ad55d1e39c4aef549f7e8014746e278226a8442208e4853e17bc5c1d.json  query-9611982c6efe70d0a700fbd0487ff9e512be1b94d9ffc13dffe202747909dd41.json  query-994f98c88e8d3730be5352c2c87db86a341e306dacbc7344803989eab1d99834.json  query-a55da47877a85db9f6b6e6dfd182c00f3a3e6febffd69366e0e0e1314c76f847.json  query-aa605b8b0308fa58c8feb94c0289f1a38ae34f09bb067a3d5ab8529efe1af63d.json  query-ae32a67af61523901eaccdd5ff00ae2b7bf95a9f10eac965b2119fbc568cdfc1.json  query-b03993b4a4966e375b510a002617b5b127d70c032e669c9e0f34b163ecf4b0c1.json  query-b20b6ec25a475611bb9074dfa784a1ca3106cd147463c11ad85bfbad27ca0ed2.json  query-c4496480c72beca6cecb6271bf6eccb4a8d741765f944b41c5ecb85c8addcb87.json  query-cb1a9a55d8bd53564ece07569a5184a818a87d5c870b54236422fefc6f0f33e4.json  query-cdeb670aadbbd21567dbd713dc9565874d56c7963007f78ff4a3832b14412643.json  query-d10eece21433f923af1023756ca82d52602173b6e05d1f338f923c7158bc6dc3.json  query-e405a07f43fb5d6dcf8a8e9418fe74da7393fd2374f473d20c2b07f6a01ede50.json  query-ea6cc3496a769c323b96592fa30674cc25574d451a8fa110894aa3f8e414341a.json  query-f351e216f0367a70a2f6e24d17de0b3979d16d77773147e1db8bccdacdc0d49a.json
backend/: Cargo.toml
backend/.sqlx/: query-0b6c612dc6a74c5dfeddb58d63d035e5381d4053dde7625c7f8ec5804f50d37f.json  query-12f96bc2e752eff96e2b16134cefa528cdde275d8ee8428072d2d726b8734d1d.json  query-184379f27d998f7b8940b34b8dbdf18c1707a9c67ac2bed438eb1746ef76986b.json  query-1d17e0612037ea531d9b3a4823c751c5ee040bb1e6dfdffec927631eb886e706.json  query-3e84f60b7a0145cec9f1aee8ae27ce46c602b969a5bdb2821f75bf5e3e818b2c.json  query-4a1955a4d0b7cc8b30d3d0b03e1243b6e8c1f8a2b932b8543d7bc94362a6b70f.json  query-686fad3f0c1e3141fb6047e82d70569ee11a6ccc4b4cf903516564a3ef53c33c.json  query-701ebf89dfbf2764f7e045e2839b2304796b445cb1e38e74b520289f815f1f1d.json  query-994f98c88e8d3730be5352c2c87db86a341e306dacbc7344803989eab1d99834.json  query-b06e45a85783574d68b3a900e14cc2ceae223e25d6de67cd7d3be614b9444915.json  query-bf92fa732b9bd00f89739ec3e2cf6d597947f690362e461b6dcd36213fe94526.json  query-cb1a9a55d8bd53564ece07569a5184a818a87d5c870b54236422fefc6f0f33e4.json
backend/migrations/: 2024010100000_init.sql  2024032200000_analytics_and_telemetry.sql  2024050500000_cleanup_guests.sql
backend/src/: api.rs  data.rs  db.rs  error.rs  lib.rs  lobby.rs  main.rs  state.rs  types.rs  utils.rs
backend/src/models/: basic.rs  game.rs  mod.rs  stats.rs  user.rs
backend/tests/: api_tests.rs  ws_tests.rs
data/: N1_kanji.csv  N1_words.csv  N2_kanji.csv  N2_words.csv  N3_kanji.csv  N3_words.csv  N4_kanji.csv  N4_words.csv  N5_kanji.csv  N5_words.csv  joyo_kanji.csv  kanji_words.csv
frontend/: Cargo.toml  Trunk.toml  index.html  input.css  nginx.conf  package.json  tailwind.config.ts  vite.config.ts
frontend/css/: styles.css
frontend/src/: App.tsx  api.rs  app_state.rs  context.rs  error.rs  hooks.rs  lib.rs  main.orig  main.rs  persistence.rs  theme.rs  types.ts
frontend/src/components/: GameComponent.tsx  LobbyComponent.tsx  auth_modal.rs  game.rs  game_over.rs  home.rs  home_screen.bak  join_handler.rs  lobby.bak  lobby.rs  lobby_page.rs  mod.rs  player_scores.rs  pregame_lobby.bak  shared_socket.rs  toast.rs  user_menu.rs
frontend/src/components/game/: feedback.rs  game_over.rs  header.rs  input.rs  kanji.rs  mod.rs  prompt.rs  socket.rs  timer.rs
frontend/src/components/lobby/: chat.rs  lobby_join.rs  lobby_management.rs  lobby_polling.rs  lobby_socket.rs  mod.rs  mode_toggle.rs  public_list.rs  settings.rs  settings_grid.rs
frontend/src/styles/: Components.css
frontend/tests/: foundation.rs  web.rs
macros/: Cargo.toml
migrations/: 00_create_users.sql  01_create_game_sessions.sql  02_create_game_actions.sql
shared/: Cargo.toml
shared/src/: api_fns.rs  lib.rs
src/: api.rs  db.rs  lib.rs  main.rs  models.rs
src/models/: game.rs
static/: index.html
