[package]
name = "kanji_guesser"
version = "0.1.0"
edition = "2021"

[lib]
name = "kanji_guesser"
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.1"
rand = "0.8"
tokio = { version = "1.43.0", features = ["full"] }
axum = "0.8.1"
tower-http = { version = "0.6.2", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
