[workspace]
members = ["frontend", "backend"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Neel Tamtam <ntamtam614@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
