[workspace]
members = ["frontend", "backend", "shared", "macros"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Neel Tamtam <ntamtam614@gmail.com>"]

[workspace.dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.21.0", features = ["v4", "serde", "js"] }
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
