[package]
name = "moji-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
shared = { path = "../shared", features = ["ssr"] }
axum = { version = "0.8.4", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
rand = "0.9.1"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
] }
dotenv = "0.15"

# [dev-dependencies]
# criterion = "0.5"

[lib]
name = "moji"
path = "src/lib.rs"

[[bin]]
name = "moji-server"
path = "src/main.rs"
