[package]
name = "moji-backend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
shared = { path = "../shared", features = ["ssr"] }
moji-macros = { path = "../macros" }
axum = { version = "0.8.4", features = ["json", "macros", "ws"] }
futures = "0.3.32"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.2", features = ["fs", "cors", "trace"] }
rand = "0.10.0"
csv = "1.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8.5", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "migrate",
] }
argon2 = "0.5.3"
leptos = { version = "0.8.16", features = ["ssr"] }
leptos_axum = { version = "0.8.8" }
async-trait = { version = "0.1.89" }
parking_lot = { version = "0.12.5" }

[dev-dependencies]
axum-test = "18.7"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }

[lib]
name = "moji"
path = "src/lib.rs"

[[bin]]
name = "moji-server"
path = "src/main.rs"
