[package]
name = "moji-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared", default-features = false }
leptos = { version = "0.8", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "Storage",
] }
uuid = { version = "1.17.0", features = ["v4", "js"] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
console_error_panic_hook = "0.1.7"
thiserror = "2.0.12"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Optimize for size
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]
