[package]
name = "moji-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
anyhow.workspace = true
shared = { path = "../shared", default-features = false }
leptos = { version = "0.8", features = ["csr"] }
leptos_router = "0.8"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
web-sys = { version = "0.3", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "Storage",
] }
gloo-net = "0.6.0"
gloo-timers = { version = "0.3.0", features = ["futures"] }
console_error_panic_hook = "0.1.7"

[dev-dependencies]
wasm-bindgen-test = "0.3.50"

[profile.release]
# Optimize for size
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]
