[package]
name = "moji-frontend"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
shared = { path = "../shared", default-features = false }
leptos = { version = "0.8.16", features = ["csr"] }
leptos_router = "0.8.12"
leptos_dom = "0.8.8"
wasm-bindgen = "0.2.109"
wasm-bindgen-futures = "0.4.59"
js-sys = "0.3.86"
web-sys = { version = "0.3.86", features = [
  "Window",
  "Navigator",
  "Clipboard",
  "Storage",
] }
gloo-net = "0.6.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.32"
async-trait = "0.1.86"

[dev-dependencies]
wasm-bindgen-test = "0.3.59"

[profile.release]
# Optimize for size
lto = true
opt-level = 'z'

[lib]
crate-type = ["cdylib", "rlib"]
