[package]
name = "shared"
version.workspace = true
edition.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
sqlx = { version = "0.8.6", optional = true, features = [
  "macros",
  "postgres",
] }

[features]
ssr = ["dep:sqlx"]
